netpol/allow-internet-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internet-egress
  labels:
    protected: "true"
spec:
  podSelector:
    matchLabels:
      networking/allow-internet-egress: "true"
  egress:
    - {}
  policyTypes:
    - Egress
